add all of the changes
